# KeyWatch

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  detectors.toml  justfile
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
hooks/: keywatch.sh
scripts/: install.sh  release.sh  uninstall.sh
src/: cli.rs  detector.rs  hooks.rs  lib.rs  main.rs  report.rs  scanner.rs  utils.rs
templates/: pre-commit.sh  pre-push.sh
tests/: exit_tests.rs  hooks_tests.rs  integration_tests.rs  report_tests.rs  scanner_tests.rs  utils_tests.rs
