[package]
name = "key-watch"
version = "1.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Pa1Nark <pa1nark@pixincreate.dev>"]
description = "A fast secret scanner for files and directories. Detects API keys, tokens, passwords, and sensitive credentials."
repository = "https://github.com/pixincreate/KeyWatch"
homepage = "https://github.com/pixincreate/KeyWatch"
keywords = ["secret-scanner", "security", "credentials", "lint"]

license = "GPL-3.0-only"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
regex = "1.12.3"
toml = "1.1.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
glob = "0.3.3"
